@@ -1,4 +1,4 @@
-/* $OpenBSD: sftp-common.c,v 1.13 2006/03/25 13:17:02 djm Exp $ */
+/* $OpenBSD: sftp-common.c,v 1.14 2006/07/02 22:45:59 stevesk Exp $ */
 /*
  * Copyright (c) 2001 Markus Friedl.  All rights reserved.
  * Copyright (c) 2001 Damien Miller.  All rights reserved.
@@ -28,6 +28,8 @@
 
 #include <sys/types.h>
 #include <sys/stat.h>
+
+#include <grp.h>
 
 #include "buffer.h"
 #include "bufaux.h"
